<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mdpi_fondo"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button1"
        android:layout_width="158dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_weight="1.5"
        android:background="@drawable/mdpi_logo"
        android:text="@string/btn_logo" />

    <com.hersoft.pizza.CustomTextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="1.5"
        android:text="@string/nombre"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/inNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:ems="10"
        android:hint="@string/hintNombre"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <com.hersoft.pizza.CustomTextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1.5"
        android:text="@string/direccion"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/inDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:ems="10"
        android:hint="@string/hintdireccion"
        android:inputType="textPostalAddress" />

    <com.hersoft.pizza.CustomTextView
        android:id="@+id/lista1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1.5"
        android:text="@string/telefono"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/inTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:ems="10"
        android:maxLength="9"
        android:hint="@string/hintTelefono"
        android:inputType="number" />

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btnSalir"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/btnSiguiente"
            android:layout_marginLeft="20dp"
            android:background="@drawable/salir"
            android:text="@string/btnSalir"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/siguiente"
            android:text="@string/btnSiguiente"
            android:textSize="24sp" />
    </RelativeLayout>

</LinearLayout>