<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BebidasActivity"
    android:background="@drawable/mdpi_fondo" >

      <com.hersoft.pizza.CustomTextView
          android:id="@+id/total"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:text="@string/bebidastxt"
          android:textSize="32sp" />

    <GridView
        android:id="@+id/Gbebidas"
        android:layout_width="wrap_content"
        android:layout_height="143dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:numColumns="3"
        android:verticalSpacing="10dp"
        tools:listitem="@android:layout/simple_list_item_2" >

    </GridView>

    <com.hersoft.pizza.CustomTextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedido"
           android:layout_marginTop="1dp"
        android:textSize="28sp" />

     <ListView
        android:id="@+id/listaPedido"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"  >
    </ListView>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"     
      android:layout_marginBottom="15dp" >

        <Button
            android:id="@+id/btnSalir"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/btnSiguiente"
            android:layout_marginLeft="20dp"
            android:background="@drawable/salir"
            android:text="@string/btnSalir"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/siguiente"
            android:text="@string/btnSiguiente"
            android:textSize="24sp" />
    </RelativeLayout>

</LinearLayout>