<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mdpi_fondo"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PizzasActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnAnadir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/menu3" />

        <com.hersoft.pizza.CustomTextView
            android:id="@+id/txtPizzas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btnAnadir"
            android:text="@string/pizzastxt"
            android:textSize="28sp" />

    </RelativeLayout>

    <com.hersoft.pizza.CustomTextView
        android:id="@+id/pedido"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/resumenPizzas"
        android:textSize="28sp" />

    <ListView
        android:id="@+id/listaPedido"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" >

    </ListView>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:layout_weight="0.3" >

        <Button
            android:id="@+id/btnSalir"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/btnSiguiente"
            android:layout_marginLeft="20dp"
            android:background="@drawable/salir"
            android:text="@string/btnSalir"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/siguiente"
            android:text="@string/btnSiguiente"
            android:textSize="24sp" />
    </RelativeLayout>
    
</LinearLayout>