<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
   >

    <com.example.pizza_cebanc.CustomTextView
        android:id="@+id/tipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/tipo"
        android:textSize="28sp" />

    <Spinner
        android:id="@+id/spinnerTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp" />

    <com.example.pizza_cebanc.CustomTextView
        android:id="@+id/tamano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/tamano"
        android:textSize="28sp" />

    <Spinner
        android:id="@+id/spinnerTamano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp" />

    <com.example.pizza_cebanc.CustomTextView
        android:id="@+id/pizzas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/pizzas"
        android:textSize="28sp" />

    <Spinner
        android:id="@+id/spinnerPizzas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp" />

	<com.example.pizza_cebanc.NumberPicker
	    android:id="@+id/pickerPizzas"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    android:layout_marginLeft="35dp"
	    android:layout_marginRight="35dp"/>

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/anadir" />

</LinearLayout>